MSS-1410 fixed spacing

--- a/movado/cartridges/app_custom_movado/cartridge/client/default/scss/checkout/checkout.scss
+++ b/movado/cartridges/app_custom_movado/cartridge/client/default/scss/checkout/checkout.scss
@@ -859,4 +859,6 @@ header {
     letter-spacing: rem(1.14);
     line-height: rem(24);
     text-transform: uppercase;
+    margin-top: rem(20);
+    margin-bottom: rem(-5);
 }
